modules/networking/securityGroups.tf
resource "aws_security_group" "allow_basic_ports" {
  name        = "${var.environment}-allow-basic-ports"
  description = "Allow SSH / HTTP / HTTPS ports"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
